# loq

./: .fence.toml  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cli-ux-spec.md  clippy.toml  deny.toml  justfile  loq.toml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: benchmark-large-repos.yml  benchmark.yml  build-wheels.yml  ci.yml  release.yml
crates/fence_cli/: Cargo.toml
crates/fence_cli/src/: cli.rs  lib.rs  main.rs  output.rs
crates/fence_cli/tests/: cli.rs
crates/fence_core/: Cargo.toml
crates/fence_core/src/: config.rs  decide.rs  format.rs  lib.rs  parse.rs  report.rs
crates/fence_fs/: Cargo.toml
crates/fence_fs/src/: count.rs  discover.rs  lib.rs  stdin.rs  walk.rs
crates/loq_cli/: Cargo.toml
crates/loq_cli/src/: accept_defeat.rs  baseline.rs  baseline_shared.rs  check.rs  cli.rs  config_edit.rs  exact_limits.rs  init.rs  lib.rs  line_violations.rs  main.rs  output.rs  relax.rs  tighten.rs
crates/loq_cli/src/check/: input_plan.rs  input_scope.rs  tests.rs
crates/loq_cli/src/check/input_plan/: tests.rs
crates/loq_cli/src/check/input_scope/: tests.rs
crates/loq_cli/src/output/: json.rs  mod.rs  tests.rs
crates/loq_cli/tests/: accept_defeat.rs  baseline.rs  baseline_rebaseline.rs  baseline_reset.rs  cli.rs  cli_git_scope.rs  cli_scope_examples.rs  config_discovery.rs  default_token_budget.rs  escaped_paths.rs  git.rs  relax.rs  snapshots.rs  tighten.rs
crates/loq_cli/tests/common/: mod.rs
crates/loq_cli/tests/fixtures/check_scope_examples/: loq.toml
crates/loq_cli/tests/fixtures/mixed/: loq.toml  warning.md
crates/loq_cli/tests/fixtures/token_budget/: loq.toml
crates/loq_cli/tests/snapshots/: snapshots__binary_file_skipped.snap  snapshots__json_output_all_ok.snap  snapshots__json_output_empty_directory.snap  snapshots__json_output_multiple_rules.snap  snapshots__json_output_one_violation.snap  snapshots__json_output_pass_and_fail.snap  snapshots__json_output_token_budget.snap  snapshots__missing_file_stdout.snap  snapshots__mixed_pass_error_warning.snap  snapshots__token_budget.snap
crates/loq_core/: Cargo.toml
crates/loq_core/src/: config.rs  decide.rs  format.rs  lib.rs  limit.rs  parse.rs  report.rs
crates/loq_core/src/config/: tests.rs
crates/loq_fs/: Cargo.toml
crates/loq_fs/benches/: count.rs
crates/loq_fs/src/: cache.rs  count.rs  discover.rs  git.rs  inspection.rs  lib.rs  path_identity.rs  stdin.rs  tests.rs  walk.rs
crates/loq_fs/src/walk/: tests.rs
dev/bench/: data.js
scripts/: prepare.py
