[workspace]
members = [
  "crates/loq_core",
  "crates/loq_fs",
  "crates/loq_cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
serde_ignored = "0.1"
strsim = "0.11"
globset = "0.4"
walkdir = "2"
rayon = "1.10"
pathdiff = "0.2"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
termcolor = "1"
memchr = "2"
rustc-hash = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "warn"
missing_const_for_fn = "warn"
redundant_clone = "warn"
# Allow these pedantic lints - too strict for this project
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
