[package]
name = "fence_fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fence_core = { path = "../fence_core" }
walkdir.workspace = true
rayon.workspace = true
pathdiff.workspace = true
ignore.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
