[package]
name = "fence_fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fence_core = { path = "../fence_core" }
rayon.workspace = true
pathdiff.workspace = true
ignore.workspace = true
thiserror.workspace = true
memchr.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
tempfile = "3"
