[package]
name = "loq"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "loq_cli"
path = "src/lib.rs"

[[bin]]
name = "loq"
path = "src/main.rs"

[dependencies]
loq_core = { path = "../loq_core" }
loq_fs = { path = "../loq_fs" }
anyhow.workspace = true
clap.workspace = true
termcolor.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
