[package]
name = "loq"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Enforce file size constraints"
repository = "https://github.com/jakekaplan/loq"

[lib]
name = "loq_cli"
path = "src/lib.rs"

[[bin]]
name = "loq"
path = "src/main.rs"

[dependencies]
loq_core = { path = "../loq_core", version = "0.1.0-alpha.1" }
loq_fs = { path = "../loq_fs", version = "0.1.0-alpha.1" }
anyhow.workspace = true
clap.workspace = true
tempfile = "3"
termcolor.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
