[package]
name = "loq_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
serde_ignored.workspace = true
strsim.workspace = true
globset.workspace = true

[dev-dependencies]
tempfile = "3"
