[package]
name = "loq_fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
loq_core = { path = "../loq_core" }
rayon.workspace = true
pathdiff.workspace = true
ignore.workspace = true
thiserror.workspace = true
memchr.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "count"
harness = false
